examples/golden/generated/include/echo_chapeliser.h

/* SPDX-License-Identifier: MPL-2.0 */
/* Auto-generated by Chapeliser — do not edit manually. */
/* C header for workload: echo */
/* Regenerate with: chapeliser generate */

#ifndef CHAPELISER_ECHO_H
#define CHAPELISER_ECHO_H

#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

/*
 * Chapeliser FFI contract for workload: echo
 *
 * Implement these functions with C linkage in your application.
 * Chapeliser's generated Chapel + Zig code calls them at runtime.
 *
 * Return values: 0 = success, non-zero = error code.
 *
 * For Rust:  #[no_mangle] pub extern "C" fn echo_init() -> i32 { ... }
 * For Zig:   export fn echo_init() callconv(.C) c_int { ... }
 * For C:     int echo_init(void) { ... }
 */

/* ---- Lifecycle ---- */

/* Initialise the workload. Called once on locale 0 before processing. */
int echo_init(void);

/* Shut down the workload. Called once on locale 0 after all results stored. */
int echo_shutdown(void);

/* ---- Data I/O ---- */

/* Return the total number of input items. Called on locale 0. */
int echo_get_total_items(void);

/* Serialise input item `idx` into `buf`. Set `*len` to bytes written. */
/* `buf` has capacity 4096 bytes (from manifest max-item-bytes). */
int echo_load_item(int idx, uint8_t* buf, size_t* len);

/* Receive a processed result. `buf` contains `len` serialised bytes. */
int echo_store_result(int idx, const uint8_t* buf, size_t len);

/* ---- Processing ---- */

/* Process a single serialised item. Read from in_buf/in_len, */
/* write result to out_buf, set *out_len. Called on any locale. */
int echo_process_item(
    const uint8_t* in_buf, size_t in_len,
    uint8_t* out_buf, size_t* out_len
);

/* Process a chunk of items (for chunk partition strategy). */
int echo_process_chunk(
    const uint8_t* items_buf, int item_count,
    const int* item_offsets, const int* item_sizes,
    uint8_t* out_buf, size_t* out_len
);

/* ---- Reduction (for reduce/tree-reduce gather) ---- */

/* Combine two results into one. */
int echo_reduce(
    const uint8_t* a_buf, size_t a_len,
    const uint8_t* b_buf, size_t b_len,
    uint8_t* out_buf, size_t* out_len
);

/* ---- Match predicate (for 'first' gather) ---- */

/* Return 1 if result satisfies the search criterion, 0 otherwise. */
int echo_is_match(const uint8_t* buf, size_t len);

/* ---- Key hash (for keyed partition) ---- */

/* Return a hash of the item's key for distribution routing. */
unsigned int echo_key_hash(const uint8_t* buf, size_t len);

/* ---- Checkpoint (optional) ---- */

/* Save checkpoint data. Return -1 if not implemented. */
int echo_checkpoint_save(const uint8_t* buf, size_t len, const char* tag);

/* Load checkpoint data. Return -1 if not implemented. */
int echo_checkpoint_load(uint8_t* buf, size_t* len, const char* tag);

#ifdef __cplusplus
}
#endif

#endif /* CHAPELISER_ECHO_H */