examples/golden/generated/zig/echo_ffi.zig

// SPDX-License-Identifier: MPL-2.0
// Auto-generated by Chapeliser — do not edit manually.
// Zig FFI bridge for workload: echo
// Regenerate with: chapeliser generate

const std = @import("std");

// ----------------------------------------------------------------
// User-provided symbols (implement these in your application)
// Link against your compiled code when building with Chapel.
// ----------------------------------------------------------------

// Lifecycle
extern fn echo_init() callconv(.C) c_int;
extern fn echo_shutdown() callconv(.C) c_int;

// Data I/O
extern fn echo_get_total_items() callconv(.C) c_int;
extern fn echo_load_item(idx: c_int, buf: [*]u8, len: *usize) callconv(.C) c_int;
extern fn echo_store_result(idx: c_int, buf: [*]const u8, len: usize) callconv(.C) c_int;

// Processing
extern fn echo_process_item(in_buf: [*]const u8, in_len: usize, out_buf: [*]u8, out_len: *usize) callconv(.C) c_int;
extern fn echo_process_chunk(items_buf: [*]const u8, item_count: c_int, item_offsets: [*]const c_int, item_sizes: [*]const c_int, out_buf: [*]u8, out_len: *usize) callconv(.C) c_int;

// Reduction
extern fn echo_reduce(a_buf: [*]const u8, a_len: usize, b_buf: [*]const u8, b_len: usize, out_buf: [*]u8, out_len: *usize) callconv(.C) c_int;

// Match predicate
extern fn echo_is_match(buf: [*]const u8, len: usize) callconv(.C) c_int;

// Key hash
extern fn echo_key_hash(buf: [*]const u8, len: usize) callconv(.C) c_uint;

// Checkpoint (optional — return -1 if not implemented)
extern fn echo_checkpoint_save(buf: [*]const u8, len: usize, tag: [*:0]const u8) callconv(.C) c_int;
extern fn echo_checkpoint_load(buf: [*]u8, len: *usize, tag: [*:0]const u8) callconv(.C) c_int;

// ----------------------------------------------------------------
// Chapel-facing C-ABI exports
// These are called by the generated Chapel code via `extern proc`.
// ----------------------------------------------------------------

export fn c_init() callconv(.C) c_int {
    return echo_init();
}

export fn c_shutdown() callconv(.C) c_int {
    return echo_shutdown();
}

export fn c_get_total_items() callconv(.C) c_int {
    return echo_get_total_items();
}

export fn c_load_item(idx: c_int, buf: [*]u8, len: *usize) callconv(.C) c_int {
    return echo_load_item(idx, buf, len);
}

export fn c_store_result(idx: c_int, buf: [*]const u8, len: usize) callconv(.C) c_int {
    return echo_store_result(idx, buf, len);
}

export fn c_process_item(in_buf: [*]const u8, in_len: usize, out_buf: [*]u8, out_len: *usize) callconv(.C) c_int {
    return echo_process_item(in_buf, in_len, out_buf, out_len);
}

export fn c_process_chunk(items_buf: [*]const u8, item_count: c_int, item_offsets: [*]const c_int, item_sizes: [*]const c_int, out_buf: [*]u8, out_len: *usize) callconv(.C) c_int {
    return echo_process_chunk(items_buf, item_count, item_offsets, item_sizes, out_buf, out_len);
}

export fn c_reduce(a_buf: [*]const u8, a_len: usize, b_buf: [*]const u8, b_len: usize, out_buf: [*]u8, out_len: *usize) callconv(.C) c_int {
    return echo_reduce(a_buf, a_len, b_buf, b_len, out_buf, out_len);
}

export fn c_is_match(buf: [*]const u8, len: usize) callconv(.C) c_int {
    return echo_is_match(buf, len);
}

export fn c_key_hash(buf: [*]const u8, len: usize) callconv(.C) c_uint {
    return echo_key_hash(buf, len);
}

export fn c_checkpoint_save(buf: [*]const u8, len: usize, tag: [*:0]const u8) callconv(.C) c_int {
    return echo_checkpoint_save(buf, len, tag);
}

export fn c_checkpoint_load(buf: [*]u8, len: *usize, tag: [*:0]const u8) callconv(.C) c_int {
    return echo_checkpoint_load(buf, len, tag);
}
